--- a/index.html
+++ b/index.html
@@ -1,209 +1,221 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="hello.html">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body style="background-color: hsla(50, 43%, 76%, 0.25);">
-    <div class="container-fluid">
-        <div class="row mt-3">
-            <!-- For Attendees -->
-            <div class="col-4">
-                <div class="row mt-1 mb-1 logo-box ">
-                  <div class="logo-box red-border">
-                    <img  src="logo.jpg" alt="Logo" width="100" height="100">
-                  </div>
-                </div>
-                <div class="chatbox" style="overflow-y: scroll; height: 380px;">
-                  <div>
-                    <div class="small-box">
-                    <div class="icon">
-                        <i class="fas fa-user fa-lg"></i>
-                    </div>
-                    <div>
-                        <p class="name">Dhiraj Patil</p>
-                        <p>Hey there! Just wanted to say hi.</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    </div>
-                </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Centered Front Page</title>
+  <!-- Bootstrap CSS -->
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-                <div>
-                    <div class="small-box">
-                    <div class="icon">
-                        <i class="fas fa-user fa-lg"></i>
-                    </div>
-                    <div>
-                        <p class="name">John Doe</p>
-                        <p>Hey there! Just wanted to say hi.</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="small-box">
-                    <div class="icon">
-                        <i class="fas fa-user fa-lg"></i>
-                    </div>
-                    <div>
-                        <p class="name">John Doe</p>
-                        <p>Hey there! Just wanted to say hi.</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div>
-                  <div class="small-box">
-                  <div class="icon">
-                      <i class="fas fa-user fa-lg"></i>
-                  </div>
-                  <div>
-                      <p class="name">John Doe</p>
-                      <p>Hey there! Just wanted to say hi.</p>
-                  </div>
-                  <div class="clearfix"></div>
-                  </div>
-              </div>
-              <div>
-                <div class="small-box">
-                <div class="icon">
-                    <i class="fas fa-user fa-lg"></i>
-                </div>
-                <div>
-                    <p class="name">John Doe</p>
-                    <p>Hey there! Just wanted to say hi.</p>
-                </div>
-                <div class="clearfix"></div>
-                </div>
-            </div>
-            <div>
-              <div class="small-box">
-              <div class="icon">
-                  <i class="fas fa-user fa-lg"></i>
-              </div>
-              <div>
-                  <p class="name">John Doe</p>
-                  <p>Hey there! Just wanted to say hi.</p>
-              </div>
-              <div class="clearfix"></div>
-              </div>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+   
+  </style>
+</head>
+<body>
+
+<div class="container mt-5 centered-page main-container" style="width: 1056px; height: 575px; border: 2px solid black; border-color: rgb(23, 23, 23);">
+  <div class="row">
+    <div class="col-4">
+      <div class="row logo-box">
+        <div class="logo-box ">
+          <img  src="logo.jpg" alt="Logo">
+        </div>
+      </div>
+      <div class="chatbox" style="overflow-y: scroll; height: 280px;">
+        <div>
+          <div class="small-box">
+          <div class="icon">
+              <i class="fas fa-user fa-lg"></i> 
+              
           </div>
           <div>
-            <div class="small-box">
-            <div class="icon">
-                <i class="fas fa-user fa-lg"></i>
-            </div>
-            <div>
-                <p class="name">John Doe</p>
-                <p>Hey there! Just wanted to say hi.</p>
-            </div>
-            <div class="clearfix"></div>
-            </div>
+              <p class="name">Dhiraj Patil</p>
+              <p>Developer</p>
+              <p>Hey there! Just wanted to say hi.</p>
+          </div>
+          <div class="clearfix"></div>
+          </div>
+      </div>
+
+      <div>
+          <div class="small-box">
+          <div class="icon">
+              <i class="fas fa-user fa-lg"></i>
+          </div>
+          <div>
+              <p class="name">John Doe</p>
+              <p>Designation</p>
+              <p>Hey there! Just wanted to say hi.</p>
+          </div>
+          <div class="clearfix"></div>
+          </div>
+      </div>
+      <div>
+          <div class="small-box">
+          <div class="icon">
+              <i class="fas fa-user fa-lg"></i>
+          </div>
+          <div>
+              <p class="name">John Doe</p>
+              <p>Designation</p>
+              <p>Hey there! Just wanted to say hi.</p>
+          </div>
+          <div class="clearfix"></div>
+          </div>
+      </div>
+      <div>
+        <div class="small-box">
+        <div class="icon">
+            <i class="fas fa-user fa-lg"></i>
         </div>
-
-
-
-              </div>
-            </div>
-
-
-
-
-            <!-- For Middle Scrren and Ad -->
-            <div class="col-8">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="row">
-                                <div class="col-md-4 col-lg-4 middle-screen-company-num">
-                                    <div class="custom-box-1 text-center layered box">
-                                      <p class="custom-title-1">Opening</p>
-                                      <p>2000</p>
-                                    </div>
-                                  </div>
-                                  <div class="col-md-4 col-lg-4 middle-screen-company-num">
-                                    <div class="custom-box-1 text-center layered box">
-                                      <p class="custom-title-1">Interviews</p>
-                                      <p>3500</p>
-                                    </div>
-                                  </div>
-                                  <div class="col-md-4 col-lg-4 middle-screen-company-num">
-                                    <div class="custom-box-1 text-center layered box">
-                                      <p class="custom-title-1">Offered</p>
-                                      <p>1300</p>
-                                    </div>
-                                  </div>
-
-                                  <div>
-                                    <div class="video-container border-1">
-                                        <div class="video-container">
-                                            <iframe width="630" height="405" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-                                          </div>
-                                      </div>
-                                  </div>
-                            </div>
-                        </div>
-                        <div class="col-4 text-center">
-                          <img src="QR.jpeg" alt="QR Ad" height="300px" >
-                            <h2>Advertisement </h2>
-                            <h4>Desription of the advertisement</h4>
-                        </div>
-                    </div>
-                </div>
-            </div> 
-
-            <!-- Row End New Row for QR codes -->
-
-            <div class="container mt-2">
-              <div class="row" style="overflow-x: scroll; width: aut;">
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 1">
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 2">
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 3">
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 4">
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 5">
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <div class="image-box blue-border">
-                    <img src="OIP (1).jpeg" alt="Image 5">
-                  </div>
-                </div>
-              </div>
-            </div>
-
+        <div>
+            <p class="name">John Doe</p>
+            <p>Designation</p>
+            <p>Hey there! Just wanted to say hi.</p>
+        </div>
+        <div class="clearfix"></div>
+        </div>
     </div>
+    <div>
+      <div class="small-box">
+      <div class="icon">
+          <i class="fas fa-user fa-lg"></i>
+      </div>
+      <div>
+          <p class="name">John Doe</p>
+          <p>Designation</p>
+          <p>Hey there! Just wanted to say hi.</p>
+      </div>
+      <div class="clearfix"></div>
+      </div>
+  </div>
+  <div>
+    <div class="small-box">
+    <div class="icon">
+        <i class="fas fa-user fa-lg"></i>
+    </div>
+    <div>
+        <p class="name">John Doe</p>
+        <p>Designation</p>
+        <p>Hey there! Just wanted to say hi.</p>
+    </div>
+    <div class="clearfix"></div>
+    </div>
+</div>
+<div>
+  <div class="small-box">
+  <div class="icon">
+      <i class="fas fa-user fa-lg"></i>
+  </div>
+  <div>
+      <p class="name">John Doe</p>
+      <p>Designation</p>
+      <p>Hey there! Just wanted to say hi.</p>
+  </div>
+  <div class="clearfix"></div>
+  </div>
 </div>
 
 
 
+    </div>
+  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <!-- Font Awesome Script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+
+
+  <!-- For Middle Scrren and Ad -->
+  <div class="col-8 pl-0">
+      <div class="container main frame">
+          <div class="row">
+              <div class="col-8">
+                  <div class="row mt-1">
+                      <div class="col-md-4 col-lg-4 middle-screen-company-num">
+                          <div class="custom-box-1 text-center layered box">
+                            <h4 class="custom-title-1">Opening</h4>
+                            <h4>2000</h4>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-lg-4 middle-screen-company-num">
+                          <div class="custom-box-1 text-center layered box">
+                            <h4 class="custom-title-1">Interviews</h4>
+                            <h4>3500</h4>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-lg-4 middle-screen-company-num">
+                          <div class="custom-box-1 text-center layered box">
+                            <h4 class="custom-title-1">Offered</h4>
+                            <h4>1300</h4>
+                          </div>
+                        </div>
+
+                        <div>
+                          <div class="video-container border-1 mt-1">
+                              <div class="video-container">
+                                <video width="430px" height="290px" controls>
+                                  <source src="https://www.youtube.com/watch?v=nGhKIC_7Mkk&t=1210s" type="video/mp4">
+                                  Your browser does not support the video tag.
+                                </video>
+                                
+                                </div>
+                            </div>
+                        </div>
+                  </div>
+              </div>
+              <div class="col-4 text-center">
+                <img src="QR.jpeg" alt="QR Ad" height="150px" >
+                  <h2>Advertisement </h2>
+                  <h4>Desription of the advertisement</h4>
+              </div>
+          </div>
+      </div>
+  </div> 
+
+  <!-- Row End New Row for QR codes -->
+
+  <!-- <div class="container"> -->
+    <div class="row">
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 1" height="150px">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 2" height="150px">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 3" height="150px">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 4" height="150px">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 5" height="150px">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-box blue-border">
+          <img src="QR.jpeg" alt="Image 5" height="150px">
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+<!-- </div> -->
+
+
+
+<!-- Bootstrap JS (optional, only if you need JavaScript components) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
