--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="container mt-5 centered-page main-container" style="width: 1056px; height: 575px; border: 2px solid black; border-color: rgb(23, 23, 23);">
+<div class="container mt-5 centered-page main-container" style="width: 1056px; height: 575px; border: 2px solid black; border-color: rgb(23, 23, 23); background-color: rgb(228, 237, 239);">
   <div class="row">
     <div class="col-4">
       <div class="row logo-box">
@@ -31,8 +31,7 @@
               
           </div>
           <div>
-              <p class="name">Dhiraj Patil</p>
-              <p>Developer</p>
+              <p class="name">Dhiraj Patil ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -45,8 +44,7 @@
               <i class="fas fa-user fa-lg"></i>
           </div>
           <div>
-              <p class="name">John Doe</p>
-              <p>Designation</p>
+              <p class="name">John Doe  ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -58,8 +56,7 @@
               <i class="fas fa-user fa-lg"></i>
           </div>
           <div>
-              <p class="name">John Doe</p>
-              <p>Designation</p>
+              <p class="name">John Doe  ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -71,8 +68,7 @@
             <i class="fas fa-user fa-lg"></i>
         </div>
         <div>
-            <p class="name">John Doe</p>
-            <p>Designation</p>
+            <p class="name">John Doe  ~ (Developer)</p>
             <p>Hey there! Just wanted to say hi.</p>
         </div>
         <div class="clearfix"></div>
@@ -84,8 +80,7 @@
           <i class="fas fa-user fa-lg"></i>
       </div>
       <div>
-          <p class="name">John Doe</p>
-          <p>Designation</p>
+          <p class="name">John Doe  ~ (Developer)</p>
           <p>Hey there! Just wanted to say hi.</p>
       </div>
       <div class="clearfix"></div>
@@ -97,8 +92,7 @@
         <i class="fas fa-user fa-lg"></i>
     </div>
     <div>
-        <p class="name">John Doe</p>
-        <p>Designation</p>
+        <p class="name">John Doe  ~ (Developer)</p>
         <p>Hey there! Just wanted to say hi.</p>
     </div>
     <div class="clearfix"></div>
@@ -110,8 +104,7 @@
       <i class="fas fa-user fa-lg"></i>
   </div>
   <div>
-      <p class="name">John Doe</p>
-      <p>Designation</p>
+      <p class="name">John Doe  ~ (Developer)</p>
       <p>Hey there! Just wanted to say hi.</p>
   </div>
   <div class="clearfix"></div>
@@ -155,8 +148,9 @@
                           <div class="video-container border-1 mt-1">
                               <div class="video-container">
                                 <video width="430px" height="290px" controls>
-                                  <source src="https://www.youtube.com/watch?v=nGhKIC_7Mkk&t=1210s" type="video/mp4">
-                                  Your browser does not support the video tag.
+                                  <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" width="290" height="430" src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen controls></iframe>
+        </div>
                                 </video>
                                 
                                 </div>
