--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="container mt-5 centered-page main-container" style="width: 1056px; height: 575px; border: 2px solid black; border-color: rgb(23, 23, 23); background-color: rgb(228, 237, 239);">
+<div class="container mt-1 centered-page main-container" style="width: 1056px; height: 575px; border: 2px solid black; border-color: rgb(23, 23, 23); background-color: rgb(228, 237, 239);">
   <div class="row">
     <div class="col-4">
       <div class="row logo-box">
@@ -27,11 +27,10 @@
         <div>
           <div class="small-box">
           <div class="icon">
-              <i class="fas fa-user fa-lg"></i> 
-              
+            <img src="emoji.jpeg" class="image--cover">              
           </div>
           <div>
-              <p class="name">Dhiraj Patil ~ (Developer)</p>
+              <p class="name"><b>Dhiraj Patil</b> ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -41,10 +40,10 @@
       <div>
           <div class="small-box">
           <div class="icon">
-              <i class="fas fa-user fa-lg"></i>
+            <img src="emoji.jpeg" class="image--cover">
           </div>
           <div>
-              <p class="name">John Doe  ~ (Developer)</p>
+              <p class="name mt-54"><b>Dhiraj Patil</b>  ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -53,10 +52,10 @@
       <div>
           <div class="small-box">
           <div class="icon">
-              <i class="fas fa-user fa-lg"></i>
+            <img src="emoji.jpeg" class="image--cover">
           </div>
           <div>
-              <p class="name">John Doe  ~ (Developer)</p>
+              <p class="name"><b>Jhon Deo</b>  ~ (Developer)</p>
               <p>Hey there! Just wanted to say hi.</p>
           </div>
           <div class="clearfix"></div>
@@ -65,10 +64,10 @@
       <div>
         <div class="small-box">
         <div class="icon">
-            <i class="fas fa-user fa-lg"></i>
+          <img src="emoji.jpeg" class="image--cover">
         </div>
         <div>
-            <p class="name">John Doe  ~ (Developer)</p>
+            <p class="name"><b>Jhon Deo</b>   ~ (Developer)</p>
             <p>Hey there! Just wanted to say hi.</p>
         </div>
         <div class="clearfix"></div>
@@ -77,10 +76,10 @@
     <div>
       <div class="small-box">
       <div class="icon">
-          <i class="fas fa-user fa-lg"></i>
+        <img src="emoji.jpeg" class="image--cover">
       </div>
       <div>
-          <p class="name">John Doe  ~ (Developer)</p>
+          <p class="name"><b>Jhon Deo</b>   ~ (Developer)</p>
           <p>Hey there! Just wanted to say hi.</p>
       </div>
       <div class="clearfix"></div>
@@ -89,10 +88,10 @@
   <div>
     <div class="small-box">
     <div class="icon">
-        <i class="fas fa-user fa-lg"></i>
+      <img src="emoji.jpeg" class="image--cover">
     </div>
     <div>
-        <p class="name">John Doe  ~ (Developer)</p>
+        <p class="name"><b>Jhon Deo</b>  ~ (Developer)</p>
         <p>Hey there! Just wanted to say hi.</p>
     </div>
     <div class="clearfix"></div>
@@ -101,10 +100,10 @@
 <div>
   <div class="small-box">
   <div class="icon">
-      <i class="fas fa-user fa-lg"></i>
+    <img src="emoji.jpeg" class="image--cover">
   </div>
   <div>
-      <p class="name">John Doe  ~ (Developer)</p>
+      <p class="name"><b>Jhon Deo</b>  ~ (Developer)</p>
       <p>Hey there! Just wanted to say hi.</p>
   </div>
   <div class="clearfix"></div>
